--- a/css/firth.scss
+++ b/css/firth.scss
@@ -48,6 +48,14 @@ header h1 {
   overflow: hidden;
 }
 
+@media (max-width: 900px) {
+  header h1 {
+    width: 600px;
+    background-size: 600px 133.33px;
+  }
+
+}
+
 .header-title {
 
   font-size: 100px;
@@ -82,6 +90,15 @@ header h1 {
   width: 200px;
   border-radius: 50%;
   overflow: hidden;
+}
+@media (max-width:900px) {
+  .lines {
+    width: 180px;
+  }
+
+  .header-image {
+    width: 600px;
+  }
 }
 
 .header-text {
@@ -156,6 +173,21 @@ header h1 {
 
 .skill-list:last-child {
   margin-bottom: 30px;
+}
+
+@media (max-width: 900px) {
+  .skill-list li {
+    width: 75px;
+    padding-right: 10px;
+  }
+
+  .skill-list li:last-child {
+    padding-right: 0;
+  }
+
+  .skill-list {
+    width: 500px;
+  }
 }
 
 .projects {
@@ -292,4 +324,10 @@ header h1 {
 .social-icons > li:hover {
   background: rgba(255, 255, 255, .6);
   color: #009748;
+}
+
+@media (max-width: 900px) {
+  .contact-pieces {
+    width: 600px;
+  }
 }
