--- a/css/firth.scss
+++ b/css/firth.scss
@@ -57,6 +57,15 @@ header h1 {
 
 }
 
+@media (max-width: 600px) {
+  header h1 {
+    width: 450px;
+    background-size: 450px 100px;
+    padding-top: 100px;
+  }
+
+}
+
 .header-title {
 
   font-size: 100px;
@@ -99,6 +108,17 @@ header h1 {
 
   .header-image {
     width: 600px;
+  }
+}
+
+@media (max-width: 600px) {
+  .lines {
+    .width: 135px;
+  }
+
+  .self-pic {
+    width: 160px;
+    margin: 0 10px;
   }
 }
 
@@ -331,4 +351,20 @@ header h1 {
   .contact-pieces {
     width: 600px;
   }
+}
+
+@media (max-width: 600px) {
+  .contact-pieces {
+    width: 450px;
+  }
+
+  .social-icons {
+    width: 450px;
+  }
+
+  .social-icons i {
+    font-size: 70px;
+  }
+
+
 }
