--- a/css/firth.scss
+++ b/css/firth.scss
@@ -129,7 +129,7 @@ header h1 {
 
   margin-top: 20px;
   text-align: center;
-  padding-bottom: 50px;
+  padding-bottom: 150px;
 }
 
 .header-text span {
@@ -138,7 +138,7 @@ header h1 {
 
 .about-me {
   background: #f0532d;
-  padding: 100px 0;
+  padding: 150px 0;
 }
 
 .about-me h1 {
@@ -156,6 +156,10 @@ header h1 {
   margin: auto;
   font-family: 'Gentium Book Basic', serif;
   margin-top: 10px;
+}
+
+.skills {
+  padding: 150px 0;
 }
 
 .skills > h1 {
@@ -213,7 +217,7 @@ header h1 {
 
 .projects {
   background: #3fb1e5;
-  padding: 30px 0;
+  padding: 150px 0;
   font-family: 'Lato', sans-serif;
 }
 
@@ -300,7 +304,7 @@ header h1 {
   // background: linear-gradient(to right, #f5871f, #d7418c);
   background: #d7418c;
   color: white;
-  padding: 30px 0;
+  padding: 150px 0;
 }
 
 .contact-pieces {
